# live-bootcamp-project

./: compose.yml
.github/workflows/: prod.yml
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: email.rs  email_client.rs  mod.rs  password.rs  user.rs
auth-service/src/domain/data_stores/: banned_token_store.rs  mod.rs  two_fa_code_store.rs  user_store.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
