[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = "0.7.4"
axum-extra = { version = "0.9.3", features = ["cookie"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "offline", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
thiserror = "1.0.61"
color-eyre = "0.6.3"
tracing-error = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
fake = "2.9.2"
validator = "0.18.1"
reqwest = { version = "0.11.26", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rstest = "0.22.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.6.0"
